--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "swig": "1.3.*",
     "themeleon": "0.*",
     "themeleon-swig": "0.*",
-    "sassdoc-filter": "0.2.*",
-    "sassdoc-indexer": "0.0.*"
+    "sassdoc-filter": "^1.0.0",
+    "sassdoc-indexer": "^1.0.0"
   }
 }
