--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
+  "keywords": [
+    "sassdoc-theme"
+  ],
+
   "dependencies": {
-    "extend": "1.*",
-    "swig": "1.3.*",
-    "themeleon": "0.*",
-    "themeleon-swig": "0.*",
-    "sassdoc-filter": "^1.0.0",
-    "sassdoc-indexer": "^1.0.0"
+    "extend": "^1.0",
+    "swig": "^1.4.0",
+    "themeleon": "^3.0.0",
+    "sassdoc-extras": "^2.0.0"
   }
 }
